Minor spacing fix for top weapons

--- a/app/styles/parts/_top-weapons.scss
+++ b/app/styles/parts/_top-weapons.scss
@@ -7,6 +7,10 @@
   border-top: 1px solid #ccc;
 }
 
+.top-weapons__type + .top-weapons__type + .top-weapons__type {
+  padding-bottom: 1.5em;
+}
+
 .top-weapons__label {
   font-family: 'Roboto Condensed';
   text-transform: uppercase;
